--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,17 +23,28 @@ android {
             java.srcDirs = ['src/main/java', 'src/main/java-gen', '../dao/classes']
         }
     }
-}
 
+}
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile project(':dao')
+
     compile 'com.android.support:appcompat-v7:25.3.0'
-    compile 'de.greenrobot:greendao:2.1.0'
     compile 'com.android.support:support-v4:25.3.0'
     compile 'com.android.support:design:25.3.0'
+    compile 'com.google.firebase:firebase-auth:10.2.1'
+    compile 'com.google.firebase:firebase-database:10.2.1'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'io.reactivex.rxjava2:rxjava:2.0.1'
+    compile 'com.jakewharton:butterknife:8.5.1'
+    compile 'de.greenrobot:greendao:2.1.0'
+    compile 'com.google.android.gms:play-services:10.2.1'
+    compile 'com.facebook.android:facebook-android-sdk:4.22.0'
+    compile 'com.google.code.gson:gson:2.7'
     testCompile 'junit:junit:4.12'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 }
+apply plugin: 'com.google.gms.google-services'
