--- a/dao/build.gradle
+++ b/dao/build.gradle
@@ -8,7 +8,9 @@ project(':dao') {
 
     dependencies {
         compile fileTree(dir: 'libs', include: ['*.jar'])
-        compile 'de.greenrobot:greendao-generator:2.1.0'
+        compile ('de.greenrobot:greendao-generator:2.1.0'){
+            exclude group: 'org.freemarker'
+        }
     }
 
     sourceCompatibility = "1.7"
