se agrega actualización y obtención de localización en el mapa y cambio de iconos

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,7 +55,7 @@
             android:value="@string/facebook_app_id" />
 
         <activity
-            android:name=".utilities.MapsActivity"
+            android:name=".presentation.main.ui.activities.MapsActivity"
             android:label="@string/title_activity_maps" />
         <activity android:name=".presentation.main.ui.activities.MainActivity" />
 
