--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,8 @@ dependencies {
 
     compile 'com.wdullaer:materialdatetimepicker:3.2.0'
 
+    compile 'com.afollestad.material-dialogs:core:0.9.0.2'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
