incio de optener las preguntas de firebase, otros ajustes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".presentation.auth.ui.activities.AuthActivity" />
-        <activity
-            android:name=".presentation.splash.Splash">
+        <activity android:name=".presentation.splash.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -57,11 +56,11 @@
             android:name=".presentation.main.ui.activities.MapsActivity"
             android:label="@string/title_activity_maps" />
         <activity android:name=".presentation.main.ui.activities.MainActivity" />
-
         <activity
             android:name=".presentation.main.ui.activities.ProfileActivity"
-            android:windowSoftInputMode="stateHidden"
-            android:parentActivityName=".presentation.main.ui.activities.MainActivity" />
+            android:parentActivityName=".presentation.main.ui.activities.MainActivity"
+            android:windowSoftInputMode="stateHidden" />
+        <activity android:name=".presentation.main.ui.activities.QuestionsActivity"></activity>
     </application>
 
 </manifest>
