--- a/dao/build.gradle
+++ b/dao/build.gradle
@@ -8,9 +8,7 @@ project(':dao') {
 
     dependencies {
         compile fileTree(dir: 'libs', include: ['*.jar'])
-        compile ('de.greenrobot:greendao-generator:2.1.0'){
-            exclude group: 'org.freemarker'
-        }
+        compile 'de.greenrobot:greendao-generator:2.1.0'
     }
 
     sourceCompatibility = "1.7"
