--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,9 +42,7 @@ dependencies {
         exclude group: 'org.freemarker'
     }
 
-    compile('de.greenrobot:greendao:2.1.0') {
-        exclude group: 'org.freemarker'
-    }
+    compile'de.greenrobot:greendao:2.1.0'
 
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:support-v4:25.3.1'
