--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,23 +27,20 @@ android {
 
 }
 dependencies {
-
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile project(':dao')
-
     compile('io.reactivex.rxjava2:rxandroid:2.0.1') {
         exclude group: 'org.freemarker'
     }
-
     compile('io.reactivex.rxjava2:rxjava:2.0.1') {
         exclude group: 'org.freemarker'
     }
-
-    compile'de.greenrobot:greendao:2.1.0'
-
+    compile ('de.greenrobot:greendao:2.1.0'){
+        exclude group: 'org.freemarker'
+    }
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:design:25.3.1'
