se arregla unos labels e inputs

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     compile ('de.greenrobot:greendao:2.1.0'){
         exclude group: 'org.freemarker'
     }
+    compile 'com.mobsandgeeks:android-saripaar:2.0.2'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:design:25.3.1'
