--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,7 @@ dependencies {
     compile 'com.wdullaer:materialdatetimepicker:3.2.0'
     compile 'com.afollestad.material-dialogs:core:0.9.0.2'
     compile 'com.google.firebase:firebase-crash:10.2.4'
+    compile 'com.google.firebase:firebase-config:10.2.4'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 }
