--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,7 @@ dependencies {
     compile 'com.afollestad.material-dialogs:core:0.9.0.2'
     compile 'com.google.firebase:firebase-crash:10.2.4'
     compile 'com.google.firebase:firebase-config:10.2.4'
+    compile 'com.google.firebase:firebase-invites:10.2.4'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 }
