--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
         config {
             keyAlias 'amate'
             keyPassword '4m4t3k3y2017'
-            storeFile file('C:/Users/USUARIO.USUARIO-PC/Documents/proyectosAndroid/FPTC_Mobile/app/amatekey.jks')
+            storeFile file('C:/Users/USUARIO.USUARIO-PC/Documents/proyectosAndroid/fundacionContraCancer/amatekey.jks')
             storePassword '4m4t3k3y2017'
         }
     }
@@ -15,8 +15,8 @@ android {
         applicationId "org.pfccap.education"
         minSdkVersion 17
         targetSdkVersion 25
-        versionCode 2
-        versionName "1.0"
+        versionCode 4
+        versionName "1.0.2"
         multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         signingConfig signingConfigs.config
@@ -60,7 +60,7 @@ dependencies {
     compile 'com.google.firebase:firebase-auth:10.2.4'
     compile 'com.google.firebase:firebase-database:10.2.4'
     compile 'com.jakewharton:butterknife:8.5.1'
-    compile 'com.facebook.android:facebook-android-sdk:4.22.0'
+    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.google.android.gms:play-services:10.2.4'
     compile 'com.wdullaer:materialdatetimepicker:3.2.0'
