--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,13 @@
 buildscript {
     repositories {
         jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.3'
-        classpath 'com.google.gms:google-services:3.0.0'
+        classpath ('com.google.gms:google-services:3.0.0'){
+            exclude group: 'org.freemarker'
+        }
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
