--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,14 +9,14 @@ android {
             storePassword '4m4t3k3y2017'
         }
     }
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 27
+    buildToolsVersion '27.0.2'
     defaultConfig {
         applicationId "org.pfccap.education"
         minSdkVersion 17
-        targetSdkVersion 25
-        versionCode 9
-        versionName "1.1.2"
+        targetSdkVersion 27
+        versionCode 21
+        versionName "1.1.4"
         multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         signingConfig signingConfigs.config
@@ -54,20 +54,21 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.mobsandgeeks:android-saripaar:2.0.2'
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:appcompat-v7:27.0.2'
+    compile 'com.android.support:support-v4:27.0.2'
+    compile 'com.android.support:design:27.0.2'
     compile 'com.google.firebase:firebase-auth:10.2.4'
     compile 'com.google.firebase:firebase-database:10.2.4'
     compile 'com.jakewharton:butterknife:8.5.1'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
-    compile 'com.android.support:multidex:1.0.1'
+    compile 'com.android.support:multidex:1.0.2'
     compile 'com.google.android.gms:play-services:10.2.4'
     compile 'com.wdullaer:materialdatetimepicker:3.2.0'
-    compile 'com.afollestad.material-dialogs:core:0.9.0.2'
     compile 'com.google.firebase:firebase-crash:10.2.4'
     compile 'com.google.firebase:firebase-config:10.2.4'
     compile 'com.google.firebase:firebase-invites:10.2.4'
+    compile 'com.afollestad.material-dialogs:core:0.9.0.2'
+    compile 'in.championswimmer:Android-SocialButtons:1.3'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 }
