--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,13 @@ buildscript {
     repositories {
         jcenter()
         mavenCentral()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.android.tools.build:gradle:3.0.1'
         classpath ('com.google.gms:google-services:3.0.0'){
             exclude group: 'org.freemarker'
         }
@@ -19,6 +23,13 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
+        maven{
+            url 'https://jitpack.io'
+        }
     }
 }
 
